# star-light-codec

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  LICENSE  LICENSING.md  NOTICE  README.ja.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
LICENSES/: CC-BY-4.0.txt  CC0-1.0.txt
benchmarks/: benchmark_real_data.py  benchmark_transport.py  search_predictors.py
benchmarks/results/: predictor-search-background-latest.json  predictor-search-summary.md  predictor-state.json  transport-baseline.json
docs/: cdf-oracle-profile.md  cdf-profile-registry.md  index.md  llm-transport.md  name-check.md  roadmap.md  spec.md
src/starlight_codec/: __init__.py  cdf_oracle.py  cdf_profile_registry.py  cdf_public_registry.py  cli.py  codec.py
src/starlight_codec/profiles/: byte-context-cdf-v0.json  byte-ppm-context-v0.json
tests/: test_cdf_oracle.py  test_cdf_pack.py  test_cdf_ppm_engine.py  test_cdf_profile_registry.py  test_cdf_public_registry.py  test_codec.py  test_real_data_benchmark.py  test_search_predictors.py
