[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "star-light-codec"
version = "0.1.0"
description = "Experimental exact byte artifact codec from the Star Light project."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "csoda" }]
keywords = ["compression", "codec", "artifact", "exact-roundtrip", "starlight"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Archiving :: Compression",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
slc = "starlight_codec.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
